src/lox_rs/lox-ebnf.txt
# Extended Backus-Naur Form for Lox.rs:

program         -> declaration* EOF;

declaration     -> varDecl
                 | statement;
varDecl         -> "var" IDENTIFIER ("=" expression)? ";";

statement       -> exprStatement
                 | printStatement;
exprStatement   -> expression ";";
printStatement  -> "print" expression ";";

expression      -> equality;
equality        -> comparison (("==" | "!=") comparison)*;
comparison      -> term (("<" | "<=" | ">" | ">=") term)*;
term            -> factor (("+" | "-") factor)*;
factor          -> unary (("*" | "/" | "%") unary)*;
unary           -> ("!" | "-") unary | primary;
primary         -> "(" primary ")" | value | IDENTIFIER;

value           -> STRING | NUMBER | BOOL | NIL;

IDENTIFIER      -> /[A-Za-z_][A-Za-z0-9_]*/
STRING          -> /"(\\.|[^"])*"/
NUMBER          -> /[0-9]+(\.[0-9]+)?([eE][0-9]+)?/
BOOL            -> /(true)|(false)/
NIL             -> nil
